Fix margin and padding for picker bottom sheet items. Use same bottom sheet layout for language and market. Add ripple effects.

--- a/app/src/main/res/layout/picker_header.xml
+++ b/app/src/main/res/layout/picker_header.xml
@@ -4,6 +4,8 @@
     android:id="@+id/header"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_triple"
+    android:layout_marginBottom="@dimen/base_margin"
     android:textAppearance="?textAppearanceHeadline5"
     tools:text="@string/language_picker_modal.title" />
