--- a/app/src/main/res/layout/picker_item_layout.xml
+++ b/app/src/main/res/layout/picker_item_layout.xml
@@ -2,13 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:foreground="?attr/selectableItemBackground"
+    android:padding="@dimen/base_margin">
 
     <RadioButton
         android:id="@+id/radioButton"
-        android:clickable="false"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/base_margin_half"
+        android:background="@android:color/transparent"
+        android:clickable="false" />
 
     <TextView
         android:id="@+id/text"
