--- a/app/src/main/res/layout/fragment_market_selected.xml
+++ b/app/src/main/res/layout/fragment_market_selected.xml
@@ -11,8 +11,8 @@
         android:id="@+id/flag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin"
-        android:layout_marginStart="@dimen/base_margin"
+        android:foreground="?selectableItemBackgroundBorderless"
+        android:padding="@dimen/base_margin_double"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@drawable/ic_flag_no" />
