--- a/app/src/main/res/layout/picker_description.xml
+++ b/app/src/main/res/layout/picker_description.xml
@@ -2,6 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/base_margin_double"
     android:layout_marginVertical="@dimen/base_margin"
     android:text="@string/language_picker_modal.text"
     android:textAppearance="?textAppearanceBody1" />
