--- a/app/src/main/res/layout/picker_layout.xml
+++ b/app/src/main/res/layout/picker_layout.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingEnd="@dimen/base_margin_double"
+    android:foreground="?selectableItemBackground"
     android:paddingStart="@dimen/base_margin_double"
     android:paddingTop="@dimen/base_margin"
+    android:paddingEnd="@dimen/base_margin_double"
     android:paddingBottom="@dimen/base_margin">
 
     <ImageView
@@ -26,8 +27,8 @@
         android:layout_marginStart="@dimen/base_margin_double"
         app:layout_constraintBottom_toTopOf="@id/selected"
         app:layout_constraintStart_toEndOf="@id/flag"
-        tools:text="@string/market_language_screen.market_label"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/market_language_screen.market_label" />
 
     <TextView
         android:id="@+id/selected"
@@ -35,10 +36,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
         android:textAppearance="?textAppearanceCaption"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/flag"
         app:layout_constraintTop_toBottomOf="@id/header"
-        tools:text="Sweden"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        tools:text="Sweden" />
 
     <ImageView
         android:layout_width="wrap_content"
