--- a/app/src/main/res/layout/expandable_bottom_sheet.xml
+++ b/app/src/main/res/layout/expandable_bottom_sheet.xml
@@ -4,26 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".feature.insurance.ui.detail.coverage.PerilBottomSheet">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/peril_bottom_sheet_close_icon_size"
+        android:layout_marginTop="@dimen/base_margin_double"
         android:paddingStart="@dimen/base_margin_triple"
-        android:paddingEnd="@dimen/base_margin_triple"
-        android:layout_marginTop="@dimen/base_margin_double">
+        android:paddingEnd="@dimen/base_margin_triple">
 
         <ImageView
             android:id="@+id/close"
             android:layout_width="@dimen/peril_bottom_sheet_close_icon_size"
             android:layout_height="@dimen/peril_bottom_sheet_close_icon_size"
+            android:contentDescription="@null"
             android:visibility="gone"
-            app:srcCompat="@drawable/ic_close"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@null" />
+            app:srcCompat="@drawable/ic_close" />
 
         <ImageView
             android:id="@+id/pill"
@@ -31,10 +31,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:contentDescription="@null"
-            app:srcCompat="@drawable/bottom_sheet_handle"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/bottom_sheet_handle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -55,16 +55,15 @@
             android:id="@+id/shadow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/peril_shadow"
-            android:layout_gravity="bottom" />
+            android:layout_gravity="bottom"
+            app:srcCompat="@drawable/peril_shadow" />
 
         <ImageView
             android:id="@+id/chevron"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_chevron_up"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/ic_chevron_up" />
     </FrameLayout>
-
 
 </FrameLayout>
