--- a/app/src/main/res/layout/covered_and_exception_item.xml
+++ b/app/src/main/res/layout/covered_and_exception_item.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:minHeight="@dimen/peril_bottom_sheet_exception_item_size"
     android:layout_marginTop="@dimen/base_margin_half"
-    android:layout_marginStart="@dimen/base_margin_double"
-    android:layout_marginEnd="@dimen/base_margin_double"
+    android:paddingHorizontal="@dimen/base_margin_double"
     android:gravity="center_vertical">
 
     <ImageView
