Disable continue button if no insurer is selected. Add shared view model to hold selected insurer state. Dismiss bottom sheet after selecting insurer. Only continue with button press.

--- a/app/src/main/res/layout/previous_insurer_fragment.xml
+++ b/app/src/main/res/layout/previous_insurer_fragment.xml
@@ -45,6 +45,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/currentInsurerLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/base_margin_quadruple"
