--- a/app/src/main/res/layout/number_action_fragment.xml
+++ b/app/src/main/res/layout/number_action_fragment.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".feature.embark.passages.numberaction.NumberActionFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messages"
@@ -41,9 +42,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:padding="@dimen/base_margin_double">
 
             <com.google.android.material.textfield.TextInputLayout
@@ -63,7 +65,18 @@
                     android:inputType="number" />
 
             </com.google.android.material.textfield.TextInputLayout>
-        </FrameLayout>
+
+            <TextView
+                android:id="@+id/unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:layout_marginTop="@dimen/base_margin_half"
+                android:textAppearance="?textAppearanceCaption"
+                tools:text="Other people" />
+
+        </LinearLayout>
+
     </com.google.android.material.card.MaterialCardView>
 
     <Button
