Add margin for embark messages

--- a/app/src/main/res/layout/fragment_embark_text_action.xml
+++ b/app/src/main/res/layout/fragment_embark_text_action.xml
@@ -10,6 +10,7 @@
         android:id="@+id/messages"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/base_margin"
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
