--- a/app/src/main/res/layout/fragment_embark_text_action.xml
+++ b/app/src/main/res/layout/fragment_embark_text_action.xml
@@ -65,8 +65,12 @@
 
     <Button
         android:id="@+id/textActionSubmit"
-        android:layout_width="wrap_content"
+        style="?materialButtonContainedLargeStyle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginEnd="@dimen/base_margin_double"
+        android:layout_marginBottom="@dimen/base_margin_double"
         android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
