--- a/app/src/main/res/layout/embark_input_item.xml
+++ b/app/src/main/res/layout/embark_input_item.xml
@@ -10,5 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:importantForAutofill="no"
+        android:imeOptions="actionDone"
         android:inputType="text" />
 </com.google.android.material.textfield.TextInputLayout>
