--- a/app/src/main/res/layout/number_action_fragment.xml
+++ b/app/src/main/res/layout/number_action_fragment.xml
@@ -63,6 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:importantForAutofill="no"
+                    android:imeOptions="actionDone"
                     android:inputType="number" />
 
             </com.google.android.material.textfield.TextInputLayout>
