--- a/app/src/main/res/layout/activity_embark.xml
+++ b/app/src/main/res/layout/activity_embark.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -13,7 +14,7 @@
         app:titleTextColor="?colorPrimary" />
 
     <include
-        android:id="@+id/loadingSpinner"
+        android:id="@+id/loadingSpinnerLayout"
         layout="@layout/loading_spinner" />
 
     <androidx.fragment.app.FragmentContainerView
