--- a/app/src/main/res/layout/number_action_fragment.xml
+++ b/app/src/main/res/layout/number_action_fragment.xml
@@ -35,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@id/messages" />
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
