--- a/app/src/main/res/layout/change_address_activity.xml
+++ b/app/src/main/res/layout/change_address_activity.xml
@@ -42,7 +42,7 @@
             android:text="You’ll get a few question about your new place to calculate your new price and coverage."
             android:layout_marginTop="@dimen/base_margin_double"
             android:layout_marginHorizontal="@dimen/base_margin_double"
-            android:textAppearance="@style/Hedvig.TextAppearance.Body1"
+            android:textAppearance="?textAppearanceBody1"
             app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
