--- a/app/src/main/res/layout/embark_message_item.xml
+++ b/app/src/main/res/layout/embark_message_item.xml
@@ -4,7 +4,7 @@
     android:id="@+id/message"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="@dimen/base_margin"
+    android:layout_marginVertical="@dimen/base_margin_half"
     android:maxWidth="@dimen/embark_chat_bubble_max_width"
     android:theme="@style/ThemeOverlay.Hedvig.Embark.Chat.Hedvig"
     android:textAppearance="?textAppearanceSubtitle1"
