--- a/app/src/main/res/layout/fragment_embark_select_action.xml
+++ b/app/src/main/res/layout/fragment_embark_select_action.xml
@@ -7,16 +7,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messages"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/base_margin"
-        android:layout_marginStart="@dimen/base_margin_double"
-        android:layout_marginEnd="@dimen/base_margin_double"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        style="@style/Hedvig.Theme.EmbarkList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:itemCount="1"
+        tools:itemCount="3"
         tools:listitem="@layout/embark_message_item" />
 
     <TextView
@@ -37,6 +32,7 @@
         android:id="@+id/actions"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/base_margin"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
