--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,4 +145,14 @@
         <item name="android:theme">@style/AdyenCheckout.PrimaryFlatButton</item>
     </style>
 
+    <style name="Hedvig.Theme.EmbarkList">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="layoutManager">androidx.recyclerview.widget.LinearLayoutManager</item>
+        <item name="android:layout_marginStart">@dimen/base_margin_double</item>
+        <item name="android:layout_marginEnd">@dimen/base_margin_double</item>
+        <item name="android:clipToPadding">false</item>
+        <item name="android:paddingTop">12dp</item>
+    </style>
+
 </resources>
