Capitalize words for embark text input

--- a/app/src/main/res/layout/embark_input_item.xml
+++ b/app/src/main/res/layout/embark_input_item.xml
@@ -11,5 +11,5 @@
         android:layout_height="wrap_content"
         android:importantForAutofill="no"
         android:imeOptions="actionDone"
-        android:inputType="text" />
+        android:inputType="textCapWords" />
 </com.google.android.material.textfield.TextInputLayout>
