--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -136,20 +136,17 @@
     </style>
 
     <style name="Hedvig.DatePicker" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
-        <item name="colorPrimary">@color/lavender_200</item>
-        <item name="colorOnPrimary">@color/textColorLink</item>
-        <item name="buttonBarPositiveButtonStyle">@style/Hedvig.CalendarButton</item>
-        <item name="buttonBarNegativeButtonStyle">@style/Hedvig.CalendarButton</item>
         <item name="materialCalendarHeaderLayout">@style/Hedvig.CalendarHeader</item>
         <item name="materialCalendarHeaderSelection">@style/Hedvig.HeaderSelection</item>
+        <item name="materialCalendarHeaderToggleButton">@style/HeaderToggleButton1</item>
+    </style>
+
+    <style name="HeaderToggleButton1" parent="@style/Widget.MaterialComponents.MaterialCalendar.HeaderToggleButton">
+        <item name="android:visibility">gone</item>
     </style>
 
     <style name="Hedvig.CalendarHeader" parent="Widget.MaterialComponents.MaterialCalendar.HeaderLayout">
         <item name="android:background">@color/colorOnPrimary</item>
-    </style>
-
-    <style name="Hedvig.CalendarButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="android:textColor">@color/textColorLink</item>
     </style>
 
     <style name="Hedvig.HeaderSelection" parent="Widget.MaterialComponents.MaterialCalendar.HeaderSelection">
