--- a/app/src/main/res/drawable/ic_chat_white.xml
+++ b/app/src/main/res/drawable/ic_chat_white.xml
@@ -1,3 +1,10 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="32dp" android:height="32dp" android:viewportWidth="32" android:viewportHeight="32">
-    <path android:pathData="M23.84 7.2c1.904 0 3.36 1.443 3.36 3.333v8.89a3.355 3.355 0 0 1-3.36 3.33V27.2l-4.48-4.446H8.16a3.355 3.355 0 0 1-3.36-3.332v-8.889C4.8 8.643 6.256 7.2 8.16 7.2h15.68zM8.16 11.644v1.667h15.68v-1.667H8.16zm0 4.445v1.667H21.6v-1.667H8.16z" android:fillColor="#FFF" android:fillType="evenOdd"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M19.5,3.25L4.5617,3.25C3.5287,3.25 2.5528,3.6981 1.844,4.4711C1.1371,5.242 0.75,6.2746 0.75,7.3391V14.497L0.75,14.4991C0.7529,15.5621 1.1408,16.5923 1.8466,17.362C2.5544,18.1339 3.5279,18.5827 4.5592,18.5861L4.5617,18.5861H5.3134L5.3133,20.8402L5.3135,20.8524C5.318,21.1318 5.3929,21.4085 5.5349,21.6524C5.677,21.8967 5.8834,22.1025 6.1382,22.2394C6.3937,22.3767 6.6842,22.4368 6.976,22.4081C7.2675,22.3794 7.5395,22.2641 7.7632,22.0833L7.7768,22.0723L11.7017,18.5861L19.5,18.586L19.5024,18.586C20.5337,18.5827 21.5073,18.1339 22.215,17.362C22.9208,16.5923 23.3088,15.5621 23.3117,14.4991L23.3117,7.3291L23.3117,7.327C23.3087,6.2646 22.9203,5.235 22.2137,4.4668C21.5052,3.6963 20.5309,3.25 19.5,3.25ZM17,13.75H4V12.25H17V13.75ZM4,9.5H20V8H4V9.5Z"
+      android:fillColor="#FAFAFA"
+      android:fillType="evenOdd"/>
 </vector>
