--- a/app/src/main/res/menu/embark_menu.xml
+++ b/app/src/main/res/menu/embark_menu.xml
@@ -4,22 +4,22 @@
     <item
         android:id="@+id/app_settings"
         android:icon="@drawable/ic_settings_marketing"
-        android:title="App settings"
+        android:title="@string/profile.appSettingsSection.title"
         app:showAsAction="never" />
     <item
         android:id="@+id/app_info"
         android:icon="@drawable/ic_info_more_options"
-        android:title="App information"
+        android:title="@string/onboarding_contextual_menu.app_info_label"
         app:showAsAction="never" />
     <item
         android:id="@+id/login"
         android:icon="@drawable/ic_profile"
-        android:title="Log in"
+        android:title="@string/common_signin_button_text"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/restart"
         android:icon="@drawable/ic_restart_chat"
-        android:title="Restart questions"
+        android:title="@string/EMBARK_RESTART_BUTTON"
         app:showAsAction="never" />
 </menu>
