--- a/app/src/main/res/menu/choose_plan_menu.xml
+++ b/app/src/main/res/menu/choose_plan_menu.xml
@@ -2,8 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/moreOptions"
-        android:icon="@drawable/ic_more"
-        android:title="@string/embark_onboarding_more_options.screen_title"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/app_settings"
+        android:icon="@drawable/ic_settings_marketing"
+        android:title="@string/profile.appSettingsSection.title"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/app_info"
+        android:icon="@drawable/ic_info_more_options"
+        android:title="@string/onboarding_contextual_menu.app_info_label"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/login"
+        android:icon="@drawable/ic_profile"
+        android:title="@string/common_signin_button_text"
+        app:showAsAction="never" />
 </menu>
