--- a/app/src/main/res/menu/embark_tooltip_menu.xml
+++ b/app/src/main/res/menu/embark_tooltip_menu.xml
@@ -5,10 +5,25 @@
         android:id="@+id/tooltip"
         android:icon="@drawable/ic_info_more_options"
         android:title="@string/onboarding_embark_flow.information_modal_title"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/moreOptions"
-        android:icon="@drawable/ic_more"
-        android:title="@string/embark_onboarding_more_options.screen_title"
-        app:showAsAction="always" />
+        android:id="@+id/app_settings"
+        android:icon="@drawable/ic_settings_marketing"
+        android:title="@string/profile.appSettingsSection.title"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/app_info"
+        android:icon="@drawable/ic_info_more_options"
+        android:title="@string/onboarding_contextual_menu.app_info_label"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/login"
+        android:icon="@drawable/ic_profile"
+        android:title="@string/common_signin_button_text"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/restart"
+        android:icon="@drawable/ic_restart_chat"
+        android:title="@string/EMBARK_RESTART_BUTTON"
+        app:showAsAction="never" />
 </menu>
