--- a/app/src/main/res/layout/activity_embark.xml
+++ b/app/src/main/res/layout/activity_embark.xml
@@ -14,6 +14,10 @@
         app:titleTextColor="?colorPrimary" />
 
     <include
+        android:layout_marginTop="@dimen/base_margin_quintuple"
+        android:layout_width="@dimen/loading_spinner_width"
+        android:layout_height="@dimen/loading_spinner_height"
+        android:layout_gravity="center"
         android:id="@+id/loadingSpinnerLayout"
         layout="@layout/loading_spinner" />
 
