--- a/app/src/main/res/layout/activity_zign_sec_authentication.xml
+++ b/app/src/main/res/layout/activity_zign_sec_authentication.xml
@@ -1,25 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.hedvig.app.ui.view.SafeWebView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/danishBankIdContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".feature.zignsec.ZignSecAuthenticationActivity">
-
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:navigationIcon="@drawable/ic_close"
-        app:title="@string/zignsec_login_screen_title"
-        app:titleTextAppearance="?textAppearanceHeadline6"
-        tools:layout_height="?attr/actionBarSize" />
-
-    <com.hedvig.app.ui.view.SafeWebView
-        android:id="@+id/danishBankIdContainer"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-</LinearLayout>
+    android:layout_weight="1" />
